Fixed opening extented search flicker; Added Fade in Kockout binding

--- a/fuldaflats/client/js/app/components/searchBar/searchBar.component.css
+++ b/fuldaflats/client/js/app/components/searchBar/searchBar.component.css
@@ -17,6 +17,10 @@
   text-align: left !important;
 }
 
+#search-panel .search-buttons-container{
+  display: block;
+}
+
 @media (min-width: 992px) {
   #search-panel-section{
     padding: 70px;
